# pyworkflow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DISTRIBUTED.md  MEMORY_OPTIMIZATION_IMPLEMENTATION.md  README.md  dashboard.backend.Dockerfile  docker-compose.yaml  harness.config.json  pyproject.toml  test_workflows.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
dashboard/: README.md
dashboard/backend/: .env.example  Dockerfile  main.py  pyproject.toml
dashboard/backend/app/: config.py  server.py
dashboard/backend/app/controllers/: __init__.py  run_controller.py  workflow_controller.py
dashboard/backend/app/dependencies/: storage.py
dashboard/backend/app/repositories/: __init__.py  run_repository.py  workflow_repository.py
dashboard/backend/app/rest/v1/: __init__.py  health.py  metrics.py  runs.py  workflows.py
dashboard/backend/app/schemas/: __init__.py  common.py  event.py  hook.py  run.py  step.py  workflow.py
dashboard/backend/app/services/: __init__.py  metrics_service.py  run_service.py  workflow_service.py
dashboard/backend/tests/: __init__.py  test_metrics_endpoint.py  test_metrics_service.py
docs/: architecture.md  conventions.md  custom.css  harness-gaps.md  introduction.mdx  layers.md  mint.json  pyworkflow_agents_research_and_plan.md  quickstart.mdx
examples/: README.md
pyworkflow/: __init__.py  config.py
pyworkflow_agents/: __init__.py  exceptions.py  token_tracking.py  types.py
scripts/: issue-implementer-guard.ts  issue-planner-guard.ts  issue-triage-guard.ts  remediation-agent-prompt.md  remediation-guard.ts  (+3 more)
(+305 files in other folders)
