[tool.poetry]
name = "pyworkflow-dashboard"
version = "0.1.0"
description = "Web dashboard for monitoring PyWorkflow workflows"
authors = ["PyWorkflow Team"]
readme = "README.md"
packages = [{include = "app"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
pyworkflow-engine = {path = "../..", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[tool.poetry.scripts]
dashboard = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
